src/trusted/validator_arm/testdata/bad/invalid_indirect_branches.dis
       0:	03c552ff 	(eq)	bic	r5, r5, #-268435441
       4:	e12fff15 		bx	r5
       8:	e1c12263 		bic	r2, r1, r3, ror #4
       c:	e12fff15 		bx	r5
      10:	03c552ff 	(eq)	bic	r5, r5, #-268435441
      14:	e12fff35 		blx	r5
      18:	e1c12263 		bic	r2, r1, r3, ror #4
      1c:	e12fff35 		blx	r5
      20:	03c552ff 	(eq)	bic	r5, r5, #-268435441
      24:	e12fff25 		bxj	r5
      28:	e1c12263 		bic	r2, r1, r3, ror #4
      2c:	e12fff25 		bxj	r5
      30:	e28ef042 		add	pc, lr, #66
      34:	e3cef2ff 		bic	pc, lr, #-268435441
      38:	e3cff2ff 		bic	pc, pc, #-268435441
      3c:	e1cef00d 		bic	pc, lr, sp
